[gd_scene load_steps=8 format=3 uid="uid://b7bjnfh27kir3"]

[ext_resource type="Texture2D" uid="uid://bk4oifg18dkek" path="res://textures/World/Stone/Mat_Stone_Red_01-256x256.png" id="1_86tyk"]
[ext_resource type="Script" path="res://Scripts/SpellPrefabs/MeteorObject.gd" id="1_ixfcj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nwlg2"]
albedo_texture = ExtResource("1_86tyk")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p2pf7"]

[sub_resource type="SphereMesh" id="SphereMesh_qnhh1"]
material = SubResource("StandardMaterial3D_p2pf7")
radius = 1.0
height = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_1e5e1"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_lf7c6"]
radius = 1.3

[node name="Meteor" type="RigidBody3D"]
collision_layer = 8
script = ExtResource("1_ixfcj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_nwlg2")
mesh = SubResource("SphereMesh_qnhh1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_1e5e1")

[node name="CollisionHitbox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionHitbox"]
shape = SubResource("SphereShape3D_lf7c6")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(1, 0.537255, 0.423529, 1)
light_energy = 1.95

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="area_entered" from="CollisionHitbox" to="." method="_on_collision_hitbox_area_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
